--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h5{font-size: 16px; color: rgba(19, 19, 21, 0.8);}
     background-color: #fbfeff; text-align: right; border: #a9e1ff 2px solid;}
   .popupspan{color: rgba(0, 0, 0, 0.5); font-size: 18px;}
   
-  .h1popup{font-size: 20px; border-bottom: 2px #a9e1ff solid; box-sizing: border-box; display: block;
+  .h1pop{font-size: 20px; border-bottom: 2px #a9e1ff solid; box-sizing: border-box; display: block;
    padding: 60px 0 10px 0; margin-right: 90px;}
   
   .popupclass{font-size: 16px; color: rgba(0, 0, 0, 0.8); padding-top: 15px; padding-bottom: 25px;
